--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div>
+      <p>My current favourite song is <a href="https://www.youtube.com/watch?v=szZrVN6UQM4">Shree Hari Strotram</a>.</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
